--- a/manaforge/main.html
+++ b/manaforge/main.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Drakkhs Mana Forge</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+
 </head>
 <body>
-    
+    <div id="title1" class="title">
+        Drakkhs Forge
+    </div>
+    <div id="inventory">
+        <div>primary</div>
+        <div id="primary" class="type_space"></div>
+        <div>secondary</div>
+        <div id="secondary" class="type_space"></div>
+    </div>
+    <div>workshops</div>
+    <div id="workshops">
+        <button>instruments</button>
+        <button>forge</button>
+        <button>tempering</button>
+        <button>logic block</button>
+    </div>
+    <div>selections</div>
+    <div id="workshop_selections"></div>
+    <div>results</div>
+    <div id="results"></div>
+    <script id='main' src='main.js'></script>
 </body>
 </html>
