--- a/manaforge/main.html
+++ b/manaforge/main.html
@@ -29,6 +29,7 @@
     <div id="workshop_selections"></div>
     <div>results</div>
     <div id="results"></div>
-    <script id='main' src='main.js'></script>
+    <script id='main' type="module" src='main.js'></script>
+    <script></script>
 </body>
 </html>
